# Machine-Organization-04

./: design.txt  readme.txt
array2/src/: array2.rs  lib.rs
bitpack/: Cargo.toml
bitpack/src/: bitpack.rs  lib.rs
rpeg/: Cargo.toml  compressed_image.rpeg
rpeg/src/: main.rs
rpeg/src/codec/: codec.rs  mod.rs
rpeg/src/codec/output/: mod.rs  output.rs
rpeg/src/codec/output/un_bitpack/: mod.rs  un_bitpack.rs
rpeg/src/codec/output/un_bitpack/un_quan/: mod.rs  un_quan.rs
rpeg/src/codec/output/un_bitpack/un_quan/av_dct/: av_dct.rs  mod.rs
rpeg/src/codec/output/un_bitpack/un_quan/av_dct/un_block/: mod.rs  un_block.rs
rpeg/src/codec/output/un_bitpack/un_quan/av_dct/un_block/cv_rgb/: cv_rgb.rs  mod.rs
